@@ -8,6 +8,7 @@ Revision history for Perl extension Parse::HTTP::UserAgent
     => Support new windows versions in the OS name fixer.
     => New test strings (mostly TODO).
     => Always check the existance of Trident.
+    => Support Symbian.
 
 0.39 Mon Dec  2 02:20:23 2013
     => Fix for RT#89274
